# mcp-client-cli

./: .gitignore  AI_CONFIGURATION_GUIDE.md  CHANGELOG.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  END_TO_END_WORKFLOW.md  FINAL_DEPLOYMENT_CHECKLIST.md  GITHUB_PAGES_SETUP.md  MULTI_LANGUAGE_TESTING.md  QUICK_REFERENCE.md  README.md  REVERSE_INTEGRATION_SUMMARY.md  TECHNICAL_ARCHITECTURE.md  TESTING.md  TESTING_PYTEST_MCP_SERVER.md  UPSTREAM_CONTRIBUTION_EMAIL.md  dagger.json  fix_flake8.py  package-lock.json  pyproject.toml  pytest.ini
.dagger/: dagger.json  pyproject.toml  requirements.txt
.dagger/src/: __init__.py  pipeline_results.py  test_matrix.py
.dagger/src/mcp_testing/: __init__.py
.github/workflows/: deploy-docs.yml  mcp-server-testing.yml  release.yml  test-pytest-mcp-server.yml  test.yml
archive/reverse-integration/: README.md  TESTING_PYTEST_MCP_SERVER.md
archive/reverse-integration/examples/: UNIVERSAL_SELF_TESTING_GUIDE.md  test-pytest-mcp-server.json
archive/reverse-integration/scripts/: pytest-mcp-server-workflow.py
docs/: Gemfile  README.md  SETUP_SUMMARY.md  _config.yml  chapters.md  index.md  test-local.sh
docs/_chapters/: chapter1.md  chapter10.md  chapter11.md  chapter12.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md  chapter8.md  chapter9.md
docs/_layouts/: chapter.html  default.html
docs/_site/: README.md  chapters.html  feed.xml  index.html  quick-test.sh  robots.txt  sitemap.xml
docs/_site/assets/css/: style.scss
docs/_site/chapters/chapter1/: index.html
docs/_site/chapters/chapter10/: index.html
docs/_site/chapters/chapter11/: index.html
docs/_site/chapters/chapter12/: index.html
docs/_site/chapters/chapter2/: index.html
docs/_site/chapters/chapter3/: index.html
docs/_site/chapters/chapter4/: index.html
docs/_site/chapters/chapter5/: index.html
docs/_site/chapters/chapter6/: index.html
docs/_site/chapters/chapter7/: index.html
docs/_site/chapters/chapter8/: index.html
docs/_site/chapters/chapter9/: index.html
examples/: API_REFERENCE.md  BEST_PRACTICES.md  CLI_USAGE_GUIDE.md  MCP_SERVER_INTEGRATION.md  MCP_SERVER_SETUP.md  NODEJS_MCP_SERVER_TESTING.md  PYTEST_MCP_SERVER_INTEGRATION.md  PYTEST_MCP_SERVER_SETUP.md  REVERSE_INTEGRATION_GUIDE.md  TESTING_EXAMPLES.md  TROUBLESHOOTING.md  generic_mcp_server.py  nodejs_mcp_server.js  nodejs_package.json  package.json  python_mcp_server.py  test-config-advanced.json  test-config-basic.json  test-nodejs-mcp-server.json
examples/github-actions/: nodejs-mcp-server-self-test.yml  pytest-mcp-server-self-test.yml
prompts/: MCP_SERVER_TESTING_PROMPT.md  PYTEST_MCP_SERVER_INTEGRATION_PROMPT.md
scripts/: generate-integration-report.py  quick-test-local.sh  test-pytest-mcp-server.py
src/mcp_client_cli/: __init__.py  cli.py  config.py  const.py  input.py  memory.py  output.py  prompt.py  storage.py  tool.py
src/mcp_client_cli/testing/: __init__.py  cli_integration.py  error_handler.py  issue_detector.py  issue_storage.py  mcp_tester.py  performance_tester.py  remediation.py  security_tester.py  test_storage.py
tests/: __init__.py  test_error_handler.py  test_issue_detection.py  test_mcp_core.py  test_performance.py  test_security.py
~/.llm/: config.json
