[project]
name = "mcp-testing"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["dagger-io"]

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_testing"]

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }

[project.entry-points."dagger.mod"]
main_object = "mcp_testing:McpTesting"
